--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,44 @@
-#root {
-  max-width: 1280px;
+#root{
+  width: 100%;
+}
+.space-mono-regular {
+  font-family: "Space Mono";
+  font-weight: 400;
+  font-style: normal;
+  }
+  .jersey-15-regular {
+    font-family: "Jersey 15";
+    font-weight: 400;
+    font-style: normal;
+  }
+#background-home {
+  height: 100vh; 
+  width: 100%;
+  background-image: url('https://i.pinimg.com/736x/1f/f9/05/1ff9051e266888c8cb580d30274017c0.jpg'); 
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  
+}
+#background-about-me{
+  height: 100vh; 
+  width: 100%;
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  background-image: url('https://i.pinimg.com/736x/87/60/56/87605685ff44b6d787603bb477f4798d.jpg');
+}
+#banner {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   z-index: 10; 
   background-color: rgba(0, 0, 0, 0.5); 
   backdrop-filter: blur(10px); 
